Fixed Alignment Issue

--- a/css/main.css
+++ b/css/main.css
@@ -44,8 +44,10 @@ h2{
 
 ul{
 font-size: 24pt;
+display: inline;
 text-align: center;
 list-style-position: inside;
+
 }
 body{
 color: black;
